[1.13] sync - opensmtpd/manual.html

--- a/opensmtpd/manual.html
+++ b/opensmtpd/manual.html
@@ -21,31 +21,31 @@ Web руководства доступны в самой
 Эти руководства относятся к последней версии OpenSMTPD.
 
 <ul>
- <li><a href="https://man.openbsd.org/smtpd">smtpd</a>
+ <li><a href="https://man.openbsd.org/smtpd">smtpd(8)</a>
      &mdash; демон SMTP (Simple Mail Transfer Protocol)
 
- <li><a href="https://man.openbsd.org/smtpd.conf">smtpd.conf</a>
+ <li><a href="https://man.openbsd.org/smtpd.conf">smtpd.conf(5)</a>
      &mdash; конфигурационный файл SMTP демона
 
- <li><a href="https://man.openbsd.org/smtpctl">smtpctl</a>
+ <li><a href="https://man.openbsd.org/smtpctl">smtpctl(8)</a>
      &mdash; менеджер SMTP демона
 
- <li><a href="https://man.openbsd.org/newaliases">newaliases</a>
+ <li><a href="https://man.openbsd.org/newaliases">newaliases(8)</a>
      &mdash; alias mappings генератор
 
- <li><a href="https://man.openbsd.org/makemap">makemap</a>
+ <li><a href="https://man.openbsd.org/makemap">makemap(8)</a>
      &mdash; mappings генератор
 
- <li><a href="https://man.openbsd.org/aliases">aliases</a>
+ <li><a href="https://man.openbsd.org/aliases">aliases(5)</a>
      &mdash; описание формата aliases файлов
 
- <li><a href="https://man.openbsd.org/forward">forward</a>
+ <li><a href="https://man.openbsd.org/forward">forward(5)</a>
      &mdash; формат forwarding файлов
 
- <li><a href="https://man.openbsd.org/table">table</a>
+ <li><a href="https://man.openbsd.org/table">table(5)</a>
      &mdash; описание формата таблиц smtpd
 
- <li><a href="https://man.openbsd.org/sendmail">sendmail</a>
+ <li><a href="https://man.openbsd.org/sendmail">sendmail(8)</a>
      &mdash; просмотр очереди писем (a mail enqueuer) для smtpd
 </ul>
 
