[1.24] sync - opensmtpd/portable.html

--- a/opensmtpd/portable.html
+++ b/opensmtpd/portable.html
@@ -33,7 +33,7 @@ OpenSMTPD работает на следующих UNIX-системах:
 <li>DragonFlyBSD
 <li>Linux
 <li>SmartOS
-<li>Mac OS X
+<li>macOS
 </ul>
 
 Поскольку стабильные версии не возникают волшебным образом из ниоткуда,
