[1.392] sync - faq/faq14.html

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -509,6 +509,7 @@ RAID0, RAID1, RAID5 и crypto.
 и предполагается, что вы знакомы с <a href="faq4.html">процессом установки</a>.
 Настройка диска может варьироваться от платформы к платформе, и <b>загрузка с
 устройств softraid поддерживается не на всех из них</b>.
+<!-- XXXrelease - update if raid booting capabilities change -->
 В настоящее время можно загружаться только с RAID1 и crypto томов на i386,
 amd64, sparc64 и arm64.
 
@@ -517,13 +518,11 @@ amd64, sparc64 и arm64.
 устройство <a href="https://man.openbsd.org/softraid">softraid(4)</a>.
 
 <p>
-Ядро, используемое во время установки, содержит только <code>/dev</code>
-записи для одного устройства
-<a href="https://man.openbsd.org/wd">wd(4)</a> и одного устройства
-<a href="https://man.openbsd.org/sd">sd(4)</a>, поэтому вам нужно будет
+Ядро, используемое во время установки, содержит ограниченное число
+<code>/dev</code> записей во время загрузки, поэтому вам нужно будет
 вручную создать еще пару таких устройств, если они требуются для желаемой
 настройки softraid.
-Например, если вам потребуется второе и третье устройство
+Например, если вам потребуется три устройства
 <a href="https://man.openbsd.org/sd">sd(4)</a> для создания «зеркала»,
 сделайте следующее в консоли:
 
@@ -534,8 +533,10 @@ Welcome to the OpenBSD/amd64 7.0 installation program.
 # <b>sh MAKEDEV sd0 sd1 sd2</b>
 </pre>
 
-Теперь у вас есть полностью поддерживаемые <code>sd0</code>,
-<code>sd1</code> и <code>sd2</code> устройства.
+Установшик после этого будет иметь поддержку <code>sd0</code>,
+<code>sd1</code> и <code>sd2</code> устройств.
+Если <a href="faq4.html#FilesNeeded">установочные компоненты</a>
+будут устанавливаться с USB-устройства, не забудьте учесть и это устройство.
 
 <p>
 Далее, инициализируйте диски при помощи
@@ -640,7 +641,7 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 </pre>
 
 Это также может быть сделано в
-<a href="faq8.html#LostPW">однопользовательском режиме</a>
+<a href="faq10.html#LostPW">однопользовательском режиме</a>
 или при помощи процедуры <a href="faq4.html#bsd.rd">установки ядра</a>.
 
 <h3 id="softraidFDE">Полное шифрование диска</h3>
