[1.445] sync, update sign key info - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -49,22 +49,16 @@ OpenBGPD может работать и на других операционны
 Релизы портированной версии OpenBGPD подписываются при помощи
 <a href="https://man.openbsd.org/signify.1">signify(1)</a>.
 Для этого используется public key:
-<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenBGPD/openbgpd.pub"
-style="font-family:monospace">RWTGJEPobKfXIP1+foh6O3ZGQIDIxwB0Hp4rH6fMYGdYPQMFH2IEqxcY</a>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenBGPD/openbgpd.pub">RWTGJEPobKfXIP1+foh6O3ZGQIDIxwB0Hp4rH6fMYGdYPQMFH2IEqxcY</a>
 
 <p>
 Они так же подписанны при помощи этого
 <a href="https://ftp.openbsd.org/pub/OpenBSD/OpenBGPD/openbgpd.asc">public GPG ключа</a>.
+(BA3DA14FEE657A6D7931C08EC755429BA6A969A8)
 
 <p>
-Подпись релизов может быть проверена при помощи программы signify,
-которая доступна как в самой <a href="../index.html">OpenBSD</a>, так и при помощи
-<a href="https://github.com/aperezdc/signify">портированной версии signify</a>,
-которая доступна в
-<a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>,
-<a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> и
-<a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a>,
-или же при помощи GPG.
 
 <h2>Зеркала</h2>
 
