[1.95] sync - faq/ports/guide.html

--- a/faq/ports/guide.html
+++ b/faq/ports/guide.html
@@ -238,7 +238,7 @@ don't retrieve <code>foo-latest.tar.gz</code> if it is a link to
 File names should not contain <b>just</b> the version number
 (<code>1.0.5.tar.gz</code>);
 files can be renamed during fetching if necessary, see
-<a href="http://man.openbsd.org/bsd.port.mk#DISTFILES">bsd.port.mk(5)</a>.
+<a href="https://man.openbsd.org/bsd.port.mk#DISTFILES">bsd.port.mk(5)</a>.
 If something is only available in an unversioned file, gently ask the
 original program author to make such distinctions clear.
 In the meantime, if you must use a file like this,
@@ -1145,6 +1145,12 @@ changes to patches or build flags.
 If the upstream version has not changed, the package name bump is done
 by incrementing <code>REVISION</code> if already present, otherwise adding
 <code>REVISION = 0</code> towards the top of the Makefile.
+If <code>MULTI_PACKAGES</code> are used, increment <code>REVISION</code>
+to set the default revision for all subpackages, or increment the
+individual <code>REVISION-subpkg</code> as necessary (this overrides
+<code>REVISION</code>).
+If in doubt, use <code>make show=PKGNAMES</code> to check before and after
+making changes.
 
 <li>
 Version numbers always go forward.
@@ -1157,8 +1163,7 @@ package-name conforming to
 <a href="https://man.openbsd.org/packages-specs.7">packages-specs(7)</a>.
 
 <li>
-If the package does not build, no bump is needed: changes to restore a port
-to working order after it got broken do not warrant bumps.
+If the package never built with a particular version, no bump is needed.
 
 <li>
 Changes to make sure a port does not pick/does pick an external dependency
@@ -1178,9 +1183,12 @@ number will trigger an update for packages built from your port.
 <li>
 The version comparison ordering can be summarized as:
 <code>0.1 &lt; 0.1p0 &lt; 0.2 &lt; 0.1v0 &lt; 0.1p0v0 &lt; 0.2v0 &lt; 0.1v1</code>.
-Check
-<a href="https://man.openbsd.org/packages-specs.7">packages-specs(7)</a>
-for more detailed information.
+Also additional words including <code>beta</code>, <code>rc</code> and
+<code>pre</code> are handled.
+See <a href="https://man.openbsd.org/packages-specs.7">packages-specs(7)</a>
+for more detailed information, and use
+<a href="https://man.openbsd.org/pkg_check-version.1">pkg_check-version(1)</a>
+to check the ordering of version numbers.
 </ul>
 
 Part of the work will happen before the update itself.
