[1.165] sync - faq/faq7.html.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -77,7 +77,7 @@ FAQ - Управление клавиатурой и дисплеем
 
 <h3 id="SwitchConsole">Переключение между консолями</h3>
 
-Для большинства alpha, amd64 и i386 систем OpenBSD по умолчанию
+Для большинства alpha, macppc, amd64 и i386 систем OpenBSD по умолчанию
 предоставляет шесть виртуальных терминалов: от <code>/dev/ttyC0</code>
 до <code>/dev/ttyC5</code>.
 Вы можете переключаться между ними, используя <code>[CTRL]+[ALT]</code>
