--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -1,11 +1,6 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<style>
-dt { margin-left: 40px; float: left; }
-dd { margin: 0 0 0 10em; }
-</style>
-
 <title>OpenBSD FAQ: Руководство по установке</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -159,77 +154,85 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <h2 id="Download">Загрузка OpenBSD из Интернет</h2>
 Следующие установочные образы доступны для скачивания:
 
-<ul>
-<li>
+<p>
+<table class="zebra">
+
+<tr>
+<td>
 <b>install70.img</b>
-<br>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/install70.img">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/arm64/install70.img">arm64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/install70.img">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/octeon/install70.img">octeon</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/install70.img">powerpc64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/install70.img">sparc64</a>]
-<br>
+<td>
 Образ диска, который может быть записан на USB флешку или подобное устройство.
 Содержит <a href="#FilesNeeded">установочные компоненты</a>.
+<hr>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/install70.img">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/arm64/install70.img">arm64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/install70.img">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/octeon/install70.img">octeon</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/install70.img">powerpc64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/riscv64/install70.img">riscv64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/install70.img">sparc64</a>
 
-<p>
-<li>
+<tr>
+<td>
 <b>miniroot70.img</b>
-<br>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/miniroot70.img">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/miniroot70.img">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/arm64/miniroot70.img">arm64</a>]
+<td>
+Это такой же образ, как и выше, но без установочных компонентов.
+Они могут быть загружены из интернет или c диска.
+<hr>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/miniroot70.img">alpha</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/miniroot70.img">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/arm64/miniroot70.img">arm64</a> |
 <!-- armv7 has multiple miniroot files for different boards -->
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/armv7/">armv7</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/miniroot70.img">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/landisk/miniroot70.img">landisk</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/loongson/miniroot70.img">loongson</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/luna88k/miniroot70.img">luna88k</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/octeon/miniroot70.img">octeon</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/miniroot70.img">powerpc64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/miniroot70.img">sparc64</a>]
-<br>
-Это такой же образ, как и выше, но без установочных компонент.
-Они загружаются из интернет или c локального диска.
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/armv7/">armv7</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/miniroot70.img">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/landisk/miniroot70.img">landisk</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/luna88k/miniroot70.img">luna88k</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/octeon/miniroot70.img">octeon</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/miniroot70.img">powerpc64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/riscv64/miniroot70.img">riscv64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/miniroot70.img">sparc64</a>
 
-<p>
-<li>
+<tr>
+<td>
 <b>install70.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/install70.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/install70.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/hppa/install70.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/install70.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/macppc/install70.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/install70.iso">powerpc64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/install70.iso">sparc64</a>]
-<br>
+<td>
 ISO 9660 образ. Используется для создания установочных CD/DVD.
-<br>
 Содержит установочные компоненты.
+<hr>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/install70.iso">alpha</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/install70.iso">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/hppa/install70.iso">hppa</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/install70.iso">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/macppc/install70.iso">macppc</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/install70.iso">powerpc64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/install70.iso">sparc64</a>
 
-<p>
-<li>
+<tr>
+<td>
 <b>cd70.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/cd70.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/cd70.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/hppa/cd70.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/cd70.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/macppc/cd70.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/cd70.iso">sparc64</a>]
-<br>
-Такой же образ как и выше, но без установочных компонент.
+<td>
+Такой же образ как и выше, но без установочных компоненов.
+<hr>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/cd70.iso">alpha</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/cd70.iso">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/hppa/cd70.iso">hppa</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/cd70.iso">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/macppc/cd70.iso">macppc</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/cd70.iso">sparc64</a>
+
+<tr>
+<td>
+<b>floppy70.img</b>
+<td>
+Поддерживает некоторые старые машины, где отсутствуют другие возможности для загрузки.
+<hr>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/floppy70.img">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/floppy70.img">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/floppy70.img">sparc64</a>
+
+</table>
 
 <p>
-<li>
-<b>floppy70.img</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/floppy70.img">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/floppy70.img">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/floppy70.img">sparc64</a>]
-<br>
-Поддерживает некоторые старые машины, где отсутствуют другие возможности для загрузки.
-</ul>
-
 Образы могут быть загружены с альтернативных <a href="../ftp.html">зеркал</a>.
 
 <p>
@@ -348,32 +351,45 @@ Welcome to the OpenBSD/amd64 7.0 installation program.
 
 Полная инсталляция OpenBSD разбита на несколько установочных компонент.
 
-<dl>
-  <dt><code>bsd</code>
-    <dd>Ядро <b>(обязательно для установки)</b>
-  <dt><code>bsd.mp</code>
-    <dd>Ядро с поддержкой мультипроцессорных систем (SMP) (доступно не для всех платформ).
-  <dt><code>bsd.rd</code>
-    <dd><a href="#bsd.rd">ramdisk ядро</a>
-  <dt><code>base70.tgz</code>
-    <dd>Базовая система <b>(обязательно для установки)</b>
-  <dt><code>comp70.tgz</code>
-    <dd>Компиляторы, заголовочные файлы (headers) и библиотеки
-  <dt><code>man70.tgz</code>
-    <dd>Справочные man-страницы
-  <dt><code>game70.tgz</code>
-    <dd>Консольные игры (text-based games)
-  <dt><code>xbase70.tgz</code>
-    <dd>Основные библиотеки и утилиты для X11
-        (требует <code>xshare70.tgz</code>)
-  <dt><code>xfont70.tgz</code>
-    <dd>Шрифты, используемые X11
-  <dt><code>xserv70.tgz</code>
-    <dd>X серверы
-  <dt><code>xshare70.tgz</code>
-    <dd>Справочные man-страницы и настройки для X11
-</dl>
+<p>
+<table style="margin-left: 3em">
+<tr>
+	<td><code>bsd</code>
+	<td>Ядро <strong>(обязательно для установки)</strong>
+<tr>
+	<td><code>bsd.mp</code>
+	<td>Ядро с поддержкой мультипроцессорных систем (SMP) (доступно не для всех платформ)
+<tr>
+	<td><code>bsd.rd</code>
+	<td><a href="#bsd.rd">ramdisk ядро</a>
+<tr>
+	<td><code>base70.tgz</code>
+	<td>Базовая система <strong>(обязательно для установки)</strong>
+<tr>
+	<td><code>comp70.tgz</code>
+	<td>Компиляторы, заголовочные файлы (headers) и библиотеки
+<tr>
+	<td><code>man70.tgz</code>
+	<td>Справочные man-страницы
+<tr>
+	<td><code>game70.tgz</code>
+	<td>Консольные игры (text-based games)
+<tr>
+	<td><code>xbase70.tgz</code>
+	<td>Основные библиотеки и утилиты для X11
+		(требует <code>xshare70.tgz</code>)
+<tr>
+	<td><code>xfont70.tgz</code>
+	<td>Шрифты, используемые X11
+<tr>
+	<td><code>xserv70.tgz</code>
+	<td>X серверы X11
+<tr>
+	<td><code>xshare70.tgz</code>
+	<td>Справочные man-страницы, конфиги и заголовочные файлы для X11
+</table>
 
+<p>
 Новым пользователям рекомендуется установить все эти компоненты.
 
 <p>
@@ -451,6 +467,12 @@ fontconfig, используются программами для работы 
 </ul>
 
 <h2 id= "SendDmesg">Отправка вашего dmesg после установки</h2>
+
+После успешной установки проверьте, не выглядит ли что-то странным
+в выводе команды <a href="https://man.openbsd.org/dmesg">dmesg(8)</a>.
+Если какое-то устройство показано как <code>not configured</code>,
+это значит, что оно в настоящий момент не поддерживается ядром.
+Это можно исправить только если отпаравить вывод dmesg.
 
 Содержание письма <code>/usr/src/etc/root/root.mail</code>:
 
@@ -595,4 +617,4 @@ The operation completed successfully.
 
 Обратите внимание, что OpenBSD ожидает, что real-time clock компьютера будут
 установлены на Coordinated Universal Time (UTC).
-Подробную информацию можно найти в <a href="faq8.html#TimeZone">этом разделе</a>.
+Подробную информацию можно найти в <a href="faq10.html#TimeZone">этом разделе</a>.
