[1.547] sync - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -566,7 +566,7 @@ $ <b>(dmesg; sysctl hw.sensors) > ~/dmesg.txt</b>
 Если вы собираетесь установить OpenBSD на машину, где она не будет первой,
 вам, возможно, потребуется освободить место перед установкой OpenBSD.
 В дополнение к встроенным инструментам вашей существующей системы,
-<a href="http://gparted.org/">gparted</a> может быть полезен для удаления
+<a href="https://gparted.org/">gparted</a> может быть полезен для удаления
 или изменения размера существующих разделов. Предпочтительно использовать
 один из четырех основных разделов MBR для загрузки OpenBSD.
 Расширенные разделы могут не работать.
