[1.244] sync - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -154,37 +154,37 @@ OpenBSD поставляется с обширной документацией 
 
 <ul>
   <li><a href="https://man.openbsd.org/afterboot">afterboot(8)</a>
-  - вещи, требующие внимания после первой полной загрузки.
+  - вещи, требующие внимания после первой полной загрузки
   <li><a href="https://man.openbsd.org/help">help(1)</a>
-  - помощь для новых пользователей и администраторов.
+  - помощь для новых пользователей и администраторов
   <li><a href="https://man.openbsd.org/hier">hier(7)</a>
-  - раскладка файловых системw.
+  - раскладка файловых систем
   <li><a href="https://man.openbsd.org/man">man(1)</a>
-  - отображение страниц руководства.
-  <li><a href="https://man.openbsd.org/adduser">adduser(8)</a> and
+  - отображение страниц руководства
+  <li><a href="https://man.openbsd.org/adduser">adduser(8)</a> и
   <a href="https://man.openbsd.org/rmuser">rmuser(8)</a>
-  - добавление или удаление новых пользователей.
-  <li><a href="https://man.openbsd.org/reboot">reboot(8), halt(8)</a> and
+  - добавление или удаление новых пользователей
+  <li><a href="https://man.openbsd.org/reboot">reboot(8), halt(8)</a> и
   <a href="https://man.openbsd.org/shutdown">shutdown(8)</a>
-  - остановка и перезагрузки системы.
+  - остановка и перезагрузки системы
   <li><a href="https://man.openbsd.org/syspatch">syspatch(8)</a>
-  - загрузка <a href="faq10.html#Patches">обновлений безопасности</a>.
+  - загрузка <a href="faq10.html#Patches">обновлений безопасности</a>
   <li><a href="https://man.openbsd.org/sysupgrade">sysupgrade(8)</a>
-  - обновление до следующего релиза OpenBSD или нового снапшота.
+  - обновление до следующего релиза OpenBSD или нового снапшота
   <li><a href="https://man.openbsd.org/dmesg">dmesg(8)</a>
-  - повторный показ сообщений ядра в момент загрузки.
+  - повторный показ сообщений ядра в момент загрузки
   <li><a href="https://man.openbsd.org/doas">doas(1)</a>
-  - запуск команд от другого пользователя.
+  - запуск команд от другого пользователя
   <li><a href="https://man.openbsd.org/tmux">tmux(1)</a>
-  - терминальный мультиплексор.
+  - терминальный мультиплексор
   <li><a href="https://man.openbsd.org/ifconfig">ifconfig(8)</a>
-  - конфигурирование параметров сетевых интерфейсов.
+  - конфигурирование параметров сетевых интерфейсов
   <li><a href="https://man.openbsd.org/ftp">ftp(1)</a>
   - загрузка файлов из сети (поддерживается FTP/HTTP/HTTPS)
   <li><a href="https://man.openbsd.org/login.conf">login.conf(5)</a>
-  - формат файла конфигурации класса входа в систему.
+  - формат файла конфигурации класса входа в систему
   <li><a href="https://man.openbsd.org/sendbug">sendbug(1)</a>
-  - отправка сообщения об ошибке.
+  - отправка сообщения об ошибке
 </ul>
 
 Полный набор man-страниц OpenBSD можно читать online на
@@ -230,20 +230,15 @@ $ <b>man 5 crontab</b>
 Самые популярные из них:
 
 <ul>
-  <li><b>announce</b> - Анонсы и советы по безопасности.
-  <li><b>bugs</b> - Баги полученные с помощью
+  <li><b>announce</b> - анонсы и советы по безопасности
+  <li><b>bugs</b> - баги, сгенерированные при помощи
       <a href="https://man.openbsd.org/sendbug">sendbug(1)</a>
-      и их обсуждение.
-  <li><b>misc</b> - Общие пользовательские вопросы и ответы.
-      Это самый активный список и он должен быть «по умолчанию»
-	  для большинства вопросов и обсуждений.
-  <li><b>ports</b> - Обсуждение
-      <a href="ports/ports.html">дерева портов</a>.
-  <li><b>source-changes</b> - Автоматическая рассылка изменений дерева исходников CVS.
-      Каждый раз, когда разработчик вносит изменения в исходный код OpenBSD, xenocara
-	  или www, CVS отправляет копию сообщения об изменении в этот список.
-  <li><b>tech</b> - Обсуждение технических тем для разработчиков OpenBSD
-      и продвинутых пользователей.
+      и их обсуждение
+  <li><b>misc</b> - общие пользовательские вопросы и ответы
+  <li><b>ports</b> - обсуждение <a href="ports/ports.html">дерева портов</a>.
+  <li><b>source-changes</b> - автоматическая рассылка изменений дерева исходников в CVS
+  <li><b>tech</b> - обсуждение технических тем для разработчиков OpenBSD
+      и продвинутых пользователей
 </ul>
 
 Прежде чем задать вопрос в каком-либо списке рассылки, пожалуйста, проверьте
