[1.333] sync - faq/faq5.html

--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -442,59 +442,71 @@ $ <b>make tags</b>
 Есть три возможности настройки ядра:
 
 <ul>
-  <li>Настройка во время загрузки, при использовании
+  <li>Временная настройка во время загрузки при помощи
     <a href="https://man.openbsd.org/boot_config">boot_config(8)</a>
   <li>Изменение настроек скомпилированного ядра, при помощи
     <a href="https://man.openbsd.org/config">config(8)</a>
   <li>Новая компиляция собственного ядра
 </ul>
 
-Прежде чем вы начнете, мы настоятельно рекомендуем вам сначала ознакомиться с
-документацией о <a href="https://man.openbsd.org/config">config(8)</a>.
 
 <h3 id="BootConfig">Настройка во время загрузки</h3>
 
-Иногда можно столкнуться с ситуацией, когда ядро обнаруживает устройство,
-но используется неправильное IRQ. В этом случае можно воспользоваться
-<a href="https://man.openbsd.org/boot_config">boot_config(8)</a>, что даcт
-возможность конфигурировать ядро на этапе загрузки, без
-необходимости пересобирать его.
+Boot-time конфигурация OpenBSD ядра,
+<a href="https://man.openbsd.org/boot_config">boot_config(8)</a>,
+позволяет администратору изменить некоторые kernel-настройки, такие как
+влкючение или отключение поддержки какого-то железа, без необходимости
+пересобирать ядро.
 
 <p>
-Тем не менее, этот метод исправит проблему только до следующей перезагрузки.
-После перезагрузки вам снова придется повторять всю процедуру.
-Другими словами, это одноразовое решение. Исправить проблему стоит при помощи
-<a href="https://man.openbsd.org/config">config(8)</a>.
-
-<p>
-Для загрузки в User Kernel Config, или UKC, используйте опцию <code>-c</code>
-при загрузке.
+Для загрузки в User Kernel Config, или UKC, используйте опцию
+<code>-c</code> при загрузке.
 
 <pre class="cmdbox">
+Using drive 0, partition 3.
+Loading......
+probing: pc0 com0 com1 mem[638K 1918M a20=on]
+disk: hd0+ hd1+
+>> OpenBSD/amd64 BOOT 3.33
 boot> <b>boot hd0a:/bsd -c</b>
 </pre>
 
 После этого появится приглашение UKC.
-Используйте комадну <b><code>help</code></b> чтобы получить список доступных
+Используйте комадну <code>help</code> чтобы получить список доступных
 команд.
+
+<p>
+Использование <a href="https://man.openbsd.org/boot_config">boot_config(8)</a>
+дает лишь временное одноразовое изменение, т.е. процедуру придется
+повторять каждый раз после перезагрузки.
+В следующем разделе объясняется, как сделать изменения постоянными.
 
 <h3 id="config">Использование config(8) для изменения параметров ядра</h3>
 
-Парамерты <code>-e</code> и <code>-u</code>, используемые
-<a href="https://man.openbsd.org/config">config(8)</a>,
-помогут сэкономить время, затрачиваемое на компиляцию ядра.
-Параметр <code>-e</code> позволяет войти в UKC (User Kernel Config) на
-работающей системе. Изменения вступят в силу после перезагрузки.
+Запуск <a href="https://man.openbsd.org/config">config(8)</a>
+с параметром <code>-e</code> позволит войти в UKC в запущенной системе.
+Все внесенные изменения вступят в силу после перезагрузки.
 Параметр <code>-u</code> проверяет, были ли внесены изменения в ядро во
 время загрузки, т.е. использовали ли вы параметр <code>boot -c</code>
 для входа в UKC во время загрузки системы.
 
 <p>
-Для избежания проблем лучше воспользоваться опцией <code>-o</code> для
-записи в указанный другой файл.
-К примеру: <code>config -e -o bsd.new /bsd</code> запишет изменения в
-<code>bsd.new</code>.
+Чтобы избежать риска перезаписи рабочего ядра сломанным, предусмотрена
+возможность использования параметра <code>-o</code> для сохранения
+нового измененного ядра в новый файл для тестирования:
 
+<pre class="cmdbox">
+# <b>config -e -o /bsd.new /bsd</b>
+</pre>
+
+Таким образмо можно сохранить новое ядро в <code>/bsd.new</code> файл.
+После того, как вы загрузили это новое ядро и убедились, что все
+работает, изменения можно сделать постоянными, поместив их в
+<a href="https://man.openbsd.org/bsd.re-config">bsd.re-config(5)</a>.
+Это избавит от необходимости выбирать ядро при загрузке и гарантирует,
+что hibernation и линковка ядра (kernel relinking) продолжат работать.
+
+<p>
 Примеры конфигурации ядра можно найти в man-странице для
 <a href="https://man.openbsd.org/config">config(8)</a>.
 
