--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -1,15 +1,11 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>OpenBSD FAQ: Управление системой</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/faq/faq10.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/faq/faq10.html">
 
 <h2 id=OpenBSD>
 <a href="../index.html">
