--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -9,7 +9,7 @@
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/faq/faq7.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/faq/faq7.html">
 
 <h2 id=OpenBSD>
 <a href="../index.html">
