--- a/faq/pf/ftp.html
+++ b/faq/pf/ftp.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="../../favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="../../openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/faq/pf/ftp.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/faq/pf/ftp.html">
 
 <h2 id=OpenBSD>
 <a href="../../index.html">
