--- a/faq/pf/nat.html
+++ b/faq/pf/nat.html
@@ -5,7 +5,7 @@
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/faq/pf/nat.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/faq/pf/nat.html">
 <style>
 li p {
 	margin: 0;
