--- a/faq/pf/tables.html
+++ b/faq/pf/tables.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/faq/pf/tables.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/faq/pf/tables.html">
 
 <h2 id=OpenBSD>
 <a href="../../index.html">
