[1.26] sync, rpki-client 7.6 released - rpki-client/index.html

--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -39,8 +39,8 @@
 
 <p id="callout">
 
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.5.txt">rpki-client 7.5</a>
-вышел 9 ноября 2021 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.6.txt">rpki-client 7.6</a>
+вышел 7 февраля 2022 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
