--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.5 вышла 9 ноября 2021 года.
+Портированная версия rpki-client 7.6 вышла 7 февраля 2022 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
