[1.62] sync, add info about rpki-client - openbgpd/index.html

--- a/openbgpd/index.html
+++ b/openbgpd/index.html
@@ -61,6 +61,8 @@ BGP, которую используют многие сервера.
 поддерживают соответствующе протоколы.
 <a href="https://man.openbsd.org/ldpd">ldpd(8)</a> и 
 <a href="https://man.openbsd.org/mpe">mpe(4)</a> добавляют поддержку MPLS.
+<a href="https://man.openbsd.org/rpki-client">rpki-client(8)</a> облегчает
+проверку маршрута (Route Origin) найденного BGP.
 
 <p>
 OpenBGPD разрабатывался в основном Хеннингом Брауэром (Henning Brauer),
