--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -6,7 +6,7 @@
 <meta name="description" content="OpenBGPD for OpenBSD">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="https://www.openbgpd.org/ftp.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/openbgpd/ftp.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
