[1.519] sync - anoncvs.html

--- a/anoncvs.html
+++ b/anoncvs.html
@@ -6,7 +6,7 @@
 <meta name="description" content="How to get OpenBSD updates via Internet using Anonymous CVS">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/anoncvs.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/anoncvs.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -251,7 +251,7 @@ $ <b>cvs -q up -Pd -rOPENBSD_7_0</b>
 
 </ul>
 
-<h4>Создание diff</h4>
+<h4>Создание Diff</h4>
 
 <p>
 Чтобы создать diff того или иного файла, после того как вы его
