[1.360] OpenSSH 9.0 release - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -50,8 +50,8 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.8">OpenSSH 8.8</a>
-состоялся 26 сентября 2021 года.<br>
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.0">OpenSSH 9.0</a>
+состоялся 8 апреля 2022 года.<br>
 
 <p>
 OpenSSH это основной инструмент для создания соединений
