--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -39,8 +39,8 @@
 
 <p id="callout">
 
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.6.txt">rpki-client 7.6</a>
-вышел 7 февраля 2022 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.8.txt">rpki-client 7.8</a>
+вышел 9 апреля 2022 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
