--- a/stable.html
+++ b/stable.html
@@ -20,7 +20,7 @@ h3, h4 {
 
 <hr>
 
-<h3 id="whatis">Что такое -stable branch?</h3>
+<h3 id="whatis">Что такое -stable Branch?</h3>
 
 <p>
 Стабильная ветка OpenBSD или -stable branch это одна из трех
@@ -59,7 +59,7 @@ OpenBSD, вы можете просто <a href="anoncvs.html#updating">доза
 <p>
 Не пытайтесь обновляться с одного релиза на другой компилируя исходники.
 Вместо этого, следуйте инструкциям из
-<a href="https://www.openbsd.org/faq/upgrade70.html">руководства (upgrade guide)</a>
+<a href="https://www.openbsd.org/faq/upgrade71.html">руководства (upgrade guide)</a>
 для release, прежде чем компилировать -stable.
 
 <h3 id="building">Сборка OpenBSD -stable</h3>
