[1.453] sync, OpenBSD 7.1 - security.html

--- a/security.html
+++ b/security.html
@@ -78,7 +78,8 @@ h3 {
 <br>
 <a href="https://openbsd.org/errata68.html">6.8</a>,
 <a href="https://openbsd.org/errata69.html">6.9</a>,
-<a href="https://openbsd.org/errata70.html">7.0</a>.
+<a href="https://openbsd.org/errata70.html">7.0</a>,
+<a href="https://openbsd.org/errata71.html">7.1</a>.
 <br>
 <hr>
 
