[1.62] sync, rpki-client 7.8 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.6 вышла 7 февраля 2022 года.
+Портированная версия rpki-client 7.8 вышла 9 апреля 2022 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -33,8 +33,8 @@
 
 <p>
 rpki-client работат на всех операционных системах, где есть библиотека libcrypto,
-основанная на OpenSSL 1.1 или LibreSSL 3.3, и библиотека libtls, совместимая
-с LibreSSL 3.3 или более новой.
+основанная на OpenSSL 1.1 или LibreSSL 3.4, и библиотека libtls, совместимая
+с LibreSSL 3.4 или более новой.
 
 <p>
 На момент написания портированная версия rpki-client собиралась и работала на
