[1.4] sync, OpenIKED 7.1 - openiked/releases.html

--- a/openiked/releases.html
+++ b/openiked/releases.html
@@ -50,6 +50,9 @@ RWQpQ9uFY+N0CJU4G4tOjEvD1rj8vJaF1O3BLLrV8ZBc7dScEEYaGq/P</a>
 Список релизов, перечисленных в обратном хронологическом порядке:
 
 <ul>
+<li><p><strong>OpenIKED 7.1</strong> (23 мая 2022 года)
+<br><a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.1-relnotes.txt">7.1 Release Notes</a>
+
 <li><p><strong>OpenIKED 7.0</strong> (3 ноября 2021 года)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/OpenIKED/openiked-7.0-relnotes.txt">7.0 Release Notes</a>
 
