--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.4.2-relnotes.txt">LibreSSL 3.4.2</a>
-вышла 25 ноября 2021 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.5.3-relnotes.txt">LibreSSL 3.5.3</a>
+вышла 18 мая 2022 года
 
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
@@ -57,7 +57,7 @@ LibreSSL представляет из себя криптографически
 для других ОС (Linux, FreeBSD, Windows, и.т.д.).
 
 <p>
-Последним stable релизом является 3.4.2<br>
+Последним stable релизом является 3.5.3<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
