[1.855] sync, OpenBSD 7.1 - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -44,7 +44,7 @@
 	доступна коллекция FTP OpenBSD. Это может быть ссылкой, если
 	это необходимо.
 	<p>
-<li><b>/pub/OpenBSD/7.0/</b><br>
+<li><b>/pub/OpenBSD/7.1/</b><br>
 	Где можно найти последний релиз.
   <ul>
   <!-- XXXrelease - make sure platform list is current -->
@@ -82,11 +82,11 @@
 <li><b>/pub/OpenBSD/tools/</b><br>
 	Другое различные маленькие вещи.
 <p>
-<li><b>/pub/OpenBSD/6.9/</b><br>
-	Такая же структура каталогов как и для релиза 7.0, описанного выше.
+<li><b>/pub/OpenBSD/7.0/</b><br>
+	Такая же структура каталогов как и для релиза 7.1, описанного выше.
 </ul>
 
-<h3 id="prospective">Информация для планируемых/поддерживаемых зеркал</h3>
+<h3 id="prospective">Информация для планируемых/поддерживаемых Зеркал</h3>
 
 <p>
 Чтобы попасть в список официальных зеркал (на этой странице),
