first version of the openbsd_ru FAQ

--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -50,6 +50,9 @@ OpenBSD. Это ни в коем случае не официальная док
 
   <li><h3><font color="#e00000">Юзабилити</font></h3>
     <ul>
+      <li><a href="posts/ru_faq.html">
+          Неофициальный FAQ по мотивам телеграмм-канала @openbsd_ru</a>
+
       <li><a href="posts/sysupgrade_65_to_66.html">
           Краткое введение в sysupgrade(8)</a>
 
