--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 7.2 состоялся 23 сентября 2021 года.
+Релиз портированной версии OpenBGPD 7.3 состоялся 13 апреля 2022 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
