[1.289] 7.1 update - amd64.html

--- a/amd64.html
+++ b/amd64.html
@@ -69,9 +69,9 @@ OpenBSD/amd64 работает на процессорах семейства AM
 
 <p>
 Последним поддерживаемым релизом OpenBSD/amd64 является
-<a href="https://www.openbsd.org/70.html">OpenBSD 7.0</a>.
+<a href="https://www.openbsd.org/71.html">OpenBSD 7.1</a>.
 Вот
-<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/amd64/INSTALL.amd64">
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.1/amd64/INSTALL.amd64">
 инструкции по установке OpenBSD/amd64</a>.
 
 <p>
@@ -86,7 +86,7 @@ OpenBSD/amd64 работает на процессорах семейства AM
 <p>
 Предоставляется несколько установочных носителей:
 <ul>
-  <li><strong>CD образ</strong> (install70.iso)
+  <li><strong>CD образ</strong> (install71.iso)
   <br>
   CD ISO предоставляет загрузочный образ <i>El Torito</i> без эмуляции,
   включающий практически все драйверы OpenBSD.
@@ -94,11 +94,11 @@ OpenBSD/amd64 работает на процессорах семейства AM
   и клавиатурa).<br>
   Список свежих драйверов этого образа можно найти в файле конфигурации ядра
   <a href="https://cvsweb.openbsd.org/src/sys/arch/amd64/conf/RAMDISK_CD?rev=HEAD">RAMDISK_CD</a>
-  <li><strong>Образ диска</strong> (miniroot70.img)
+  <li><strong>Образ диска</strong> (miniroot71.img)
   <br>
   Тот же установщик, что и CD ISO образ, но в форме, подходящей для создания
   загружаемых жестких дисков или USB накопителей.
-  <li><strong>Дискета A</strong> (floppy70.img)
+  <li><strong>Дискета (floppy A)</strong> (floppy71.img)
   <br>
   Этот образ дискеты размером 1,44 МБ содержит наиболее распространенные
   драйверы. Он создан для наиболее типичного ПК. Как правило,
