--- a/openssh/openbsd.html
+++ b/openssh/openbsd.html
@@ -36,6 +36,56 @@ h3 {
 Нижеперечисленные версии OpenSSH можно использовать в OpenBSD:
 
 <ul>
+<li><h3>OpenSSH 9.0: 8 апреля 2022 года</h3>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-9.0.tar.gz">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-9.0.tar.gz</a>
+
+<p>
+Если вы устанавливаете OpenSSH 9.0 на OpenBSD 7.0 или 6.9, понадобится этот патч:<br>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd70_9.0.patch">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd70_9.0.patch</a>
+
+<pre>
+# cd /usr/src/usr.bin
+# tar zxvf .../openssh-9.0.tar.gz
+# cd ssh
+# patch &lt; /path/to/openbsd70_9.0.patch # если используется OpenBSD 7.0 или 6.9
+# make obj
+# make cleandir
+# make depend
+# make
+# make install
+# cp ssh_config sshd_config /etc/ssh # (необязательно)
+</pre>
+и перезапустите sshd.
+
+<li><h3>OpenSSH 8.9: 23 февраля 2022 года</h3>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.9.tar.gz">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.9.tar.gz</a>
+
+<p>
+Если устанавливается OpenSSH 8.9 на OpenBSD 7.0 или 6.9, понадобится этот патч:<br>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd70_8.9.patch">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd70_8.9.patch</a>
+
+<pre>
+# cd /usr/src/usr.bin
+# tar zxvf .../openssh-8.9.tar.gz
+# cd ssh
+# patch &lt; /path/to/openbsd70_8.9.patch # если используется OpenBSD 7.0 или 6.9
+# make obj
+# make cleandir
+# make depend
+# make
+# make install
+# cp ssh_config sshd_config /etc/ssh # (необязательно)
+</pre>
+и перезапускайте sshd.
+
 <li><h3>OpenSSH 8.8: 26 сентября 2021</h3>
 
 <p>
