[1.245] 7.1 update - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -95,6 +95,8 @@ OpenBSD распространяется с рядом сторонних про
   <li><a href="https://www.gnu.org/software/binutils">binutils</a>
   <li><a href="https://www.gnu.org/software/gdb/gdb.html">gdb</a>
   <li><a href="https://github.com/Yubico/libfido2">libfido2</a>
+  <li><a href="https://libexpat.github.io/">Expat</a>
+  <li><a href="https://www.zlib.net/">zlib</a>
 </ul>
 
 Команда OpenBSD часто добавляет изменения в сторонние компоненты, как правило,
@@ -189,7 +191,7 @@ OpenBSD поставляется с обширной документацией 
 
 Полный набор man-страниц OpenBSD можно читать online на
 <a href="https://man.openbsd.org">man.openbsd.org</a>,
-а также их можно найти в архиве <code>man70.tgz</code>.
+а также их можно найти в архиве <code>man71.tgz</code>.
 
 <p>
 В общем, если вы знаете имя команды или страницы руководства, вы можете
